k8s/apps/cas-api/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cas-api
  labels:
    app: cas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cas-api
  template:
    metadata:
      labels:
        app: cas-api
    spec:
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - vps
      containers:
        - name: cas-api
          image: ghcr.io/upayanmazumder/cas-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
