k8s/apps/cas-api/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cas-api
spec:
  selector:
    app: cas-api
  ports:
  - port: 4000
    targetPort: 4000
